# TskhraApplication

./: .env.example  .gitignore  Jenkinsfile  deploy.sh  docker-compose.yml  logs.md  microservice_migration.md  microservice_migration_2.md  nginx.conf  pom.xml  test.json
KeycloakUserRegistrationSpi/: pom.xml
python_web/admin/: .coveragerc  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
python_web/admin/src/app/core/: config.py  constants.py  verification_service.py
python_web/admin/src/app/infra/auth/: backend.py
python_web/admin/src/app/infra/broker/: connection.py  consumer.py
python_web/admin/src/app/infra/database/: base.py  engines.py  migration.py  session.py
python_web/admin/src/app/infra/web/: upload.py
python_web/admin/src/app/runner/: asgi.py  main.py  setup.py
python_web/admin/templates/: verification_reject.html
python_web/admin/tests/: conftest.py  test_consumer.py  test_csrf.py  test_upload.py  test_verification_service.py
python_web/cart/: .env.example  Dockerfile  alembic.ini  pyproject.toml
python_web/cart/src/app/core/: config.py
python_web/cart/src/app/core/cart/: entities.py  exceptions.py  repository.py  service.py
python_web/cart/src/app/core/facades/: catalog_facade.py
python_web/cart/src/app/core/interactors/: add_to_cart.py  checkout.py  clear_cart.py  get_cart.py  remove_from_cart.py  update_cart_item.py
python_web/cart/src/app/core/schemas/: requests.py  responses.py
python_web/cart/src/app/infra/database/: config.py  models.py  repositories.py
python_web/cart/src/app/infra/web/: dependables.py  handler.py
python_web/cart/src/app/runner/: asgi.py  main.py  setup.py
python_web/cart/tests/: conftest.py
python_web/cart/tests/integration/: test_add_to_cart.py  test_checkout.py  test_get_cart.py  test_remove_cart_item.py  test_update_cart_item.py
python_web/cart/tests/unit/: conftest.py  test_add_item.py  test_checkout_and_total.py  test_get_or_create_cart.py  test_remove_item.py  test_update_quantity.py
python_web/payment/: .env.example  Dockerfile  alembic.ini  pyproject.toml
python_web/payment/src/app/core/: config.py
python_web/payment/src/app/core/facades/: order_facade.py
python_web/payment/src/app/core/interactors/: create_order.py  create_order_internal.py  create_swap_order.py  get_order_history.py  handle_webhook.py  process_payment.py  verify_payment.py
python_web/payment/src/app/core/order/: entities.py  exceptions.py  repository.py  service.py
python_web/payment/src/app/core/payment/: entities.py  exceptions.py  gateway.py  repository.py  service.py
python_web/payment/src/app/core/schemas/: requests.py  responses.py
python_web/payment/src/app/runner/: asgi.py  main.py  setup.py
python_web/payment/tests/: conftest.py
python_web/payment/tests/api/: test_internal.py  test_payment.py  test_webhook.py
python_web/payment/tests/unit/: test_keepz_gateway.py  test_order_facade.py  test_order_service.py  test_payment_service.py  test_repositories.py
python_web/products/: .env.example  Dockerfile  pyproject.toml  pytest.ini
python_web/products/src/app/core/: config.py
python_web/products/src/app/runner/: asgi.py  main.py  setup.py
python_web/products/tests/: conftest.py
python_web/products/tests/api/: test_categories.py  test_internal.py  test_products.py  test_router_extra.py
python_web/products/tests/unit/: test_auth.py  test_broker.py  test_category_service.py  test_consumer.py  test_product_service.py  test_repositories.py  test_search.py  test_sort_handlers.py
python_web/provider/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
python_web/provider/src/app/core/: config.py
python_web/provider/src/app/runner/: asgi.py  main.py  setup.py
python_web/shared/: pyproject.toml
python_web/shared/src/backend_common/: auth.py  error_handlers.py  exceptions.py  logging.py  middleware.py  pagination.py  schemas.py  types.py
python_web/shared/src/backend_common/broker/: connection.py  consumer.py  publisher.py
python_web/shared/src/backend_common/cache/: client.py  kyc.py  repository_cache.py  service.py  verification.py
python_web/shared/src/backend_common/database/: base.py  engine.py  migration.py  mixins.py  session.py
python_web/shared/src/backend_common/email/: service.py
python_web/shared/src/backend_common/graph/: client.py
python_web/shared/src/backend_common/resilience/: bulkhead.py  circuit_breaker.py  dead_letter.py  fallback.py  retry.py  timeout.py
python_web/shared/src/backend_common/search/: client.py
python_web/shared/src/backend_common/storage/: __init__.py  base.py  client.py  local.py  minio.py  validation.py
python_web/shared/src/backend_common/tasks/: worker.py
(+474 files in other folders)
