[project]
name = "admin-panel"
version = "0.1.0"
description = "Admin panel for backend-core microservices"
requires-python = "==3.12.*"
dependencies = [
    "backend-common",
    "aiofiles>=24.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.12.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.22",
    "sqladmin>=0.20.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "aiokafka>=0.10.0",
    "alembic>=1.15.0",
    "ruff>=0.15.11",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.uv.sources]
backend-common = { path = "../../shared", editable = true }
