[project]
name = "backend-common"
version = "0.1.0"
description = "Shared library for backend-core microservices"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic-extra-types>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.31.0",
    "aio-pika>=9.6.1",
    "redis>=5.2.0",
    "meilisearch-python-sdk>=3.0.0",
    "arq>=0.26.1",
    "aiosmtplib>=3.0.2",
    "jinja2>=3.1.5",
    "httpx>=0.28.0",
    "python-magic>=0.4.27",
    "miniopy-async>=1.21",
    "neo4j>=5.18.0",
    "python-jose[cryptography]>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend_common"]